--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,17 @@
 }
 
 body {
-    color: #777777
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+
+}
+h1, h2, h3 {
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
 }
 
 header {
     width: 960px;
-    height: 100px;
+    /*height: 100px;*/
     margin: 0 auto;
     background-color: #ffffff;
     border-color: #cccccc;
@@ -20,7 +25,9 @@ header {
 h1 {
     background-color: #4aaaa5;
     color: #ffffff;
-    height: 100px;
+    font-size: 40px;
+    padding: 25px 0px 26px 0px;
+    /*height: 100px;*/
     width: 250px;
     text-align: center;
     /*margin-right: 440px;*/
@@ -28,7 +35,8 @@ h1 {
 
 nav {
     position: absolute;
-    height: 100px;
+    /*height: 100px;*/
+    padding: 35px;
     right: 0px;
     top: 0px;
     width: 270px;
@@ -36,12 +44,14 @@ nav {
 }
 
 a {
+    text-decoration: none;
     margin: 2px;
 }
 
 #backgroundimage {
     background-image: url("../images/dust_scratches.png");
     background-color: bisque;
+    border-top: 2px solid #cccccc;
 
 }
 
@@ -49,15 +59,21 @@ a {
     width: 960px;
     margin: 0 auto;
     position: relative;
+    padding: 40px 0px 40px 0px;
 }
-
 
 main {
     background-color: #ffffff;
     border: 1px;
     border-color: #dddddd;
     width: 650px;
+    padding: 30px;
+}
 
+h2 {
+    color: #4aaaa5;
+    ;
+    border-bottom: 2px solid #dddddd;
 }
 
 #janeimage {
@@ -67,15 +83,27 @@ main {
 
 aside {
     position: absolute;
-    top: 0px;
+    top: 40px;
     right: 0px;
     background-color: #ffffff;
     border: 1px;
     border-color: #dddddd;
     width: 270px;
+    padding: 30px;
 }
+
+h3 {
+    color: #4aaaa5;
+    height: 100px;
+    border-bottom: 1px solid #dddddd; 
+}
+
 
 footer {
     background-color: #666666;
     color: #ffffff;
+    text-align: center;
+    font-size: 12px;
+    padding: 40px 0px 40px 0px;
+    border-top: 8px solid #4aaaa5;
 }
