--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,21 +64,39 @@ a {
 
 main {
     background-color: #ffffff;
-    border: 1px;
-    border-color: #dddddd;
     width: 650px;
     padding: 30px;
+    border: 1px solid #dddddd;
 }
 
 h2 {
     color: #4aaaa5;
-    ;
+    font-size: 35px;
     border-bottom: 2px solid #dddddd;
+    padding-bottom: 25px;
+}
+
+.floatingcontent {
+    float: left;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: block;
 }
 
 #janeimage {
-    width: 185px;
-    height: 225px;
+    /*width: 185px;
+    height: 225px;*/
+    width: 25%;
+    padding: 25px 15px 15px 0px;
+}
+
+#bio {
+    width: 75%;
+    padding: 15px;
+    line-height: 1.6;
 }
 
 aside {
@@ -86,20 +104,31 @@ aside {
     top: 40px;
     right: 0px;
     background-color: #ffffff;
-    border: 1px;
-    border-color: #dddddd;
+    border: 1px solid #dddddd;
     width: 270px;
-    padding: 30px;
+
 }
 
 h3 {
     color: #4aaaa5;
-    height: 100px;
-    border-bottom: 1px solid #dddddd; 
+    padding: 25px;
+    font-size: 24px;
+    border-bottom: 1px solid #dddddd;
 }
 
+.connections {
+    padding: 25px 25px 40px 25px;
+
+}
+
+.connections a {
+   margin: 5px;
+   
+}
 
 footer {
+    overflow: auto;
+    clear: both;
     background-color: #666666;
     color: #ffffff;
     text-align: center;
