--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,9 +7,10 @@
 body {
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 17px;
 
 }
-h1, h2, h3 {
+h1, h2, h3 h4 {
     font-family: 'Georgia', Times, 'Times New Roman', serif;
 }
 
@@ -27,26 +28,39 @@ h1 {
     color: #ffffff;
     font-size: 40px;
     padding: 25px 0px 26px 0px;
-    /*height: 100px;*/
     width: 250px;
     text-align: center;
-    /*margin-right: 440px;*/
 }
 
 nav {
     position: absolute;
-    /*height: 100px;*/
-    padding: 35px;
+    padding: 35px 25px 35px 25px;
     right: 0px;
     top: 0px;
     width: 270px;
-    background-color: yellow;
+
 }
 
 a {
     text-decoration: none;
-    margin: 2px;
 }
+
+#index {
+    border-right: 1px solid #777777;
+    padding-right: 10px;
+}
+
+#portfolio {
+    border-right: 1px solid #777777;
+    padding-right: 10px;
+    padding-left: 8px;
+}
+
+#contact {
+    padding-left: 8px;
+}
+
+
 
 #backgroundimage {
     background-image: url("../images/dust_scratches.png");
@@ -67,6 +81,7 @@ main {
     width: 650px;
     padding: 30px;
     border: 1px solid #dddddd;
+    position: relative;
 }
 
 h2 {
@@ -123,7 +138,7 @@ h3 {
 
 .connections a {
    margin: 5px;
-   
+
 }
 
 footer {
@@ -135,4 +150,55 @@ footer {
     font-size: 12px;
     padding: 40px 0px 40px 0px;
     border-top: 8px solid #4aaaa5;
+}
+
+.imageProduct {
+    width: 270px;
+    height: 200px;
+    padding-top: 25px;
+    position: relative;
+}
+
+h4 {
+    font-size: 20px;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    padding: 8px;
+    text-align: center;
+    width: 270px;
+}
+
+form {
+    margin-top: 25px;
+    font-size: 18px;
+}
+form div {
+    margin: 10px 0px;
+}
+
+h5 {
+    margin: 3px 0px;
+}
+
+input[type=text] {
+    padding: 3px;
+    width: 585px;
+}
+
+input[type=email] {
+    padding: 3px;
+    width: 585px;
+}
+
+input[type=submit] {
+    border: 1px solid #777777;
+    color: #ffffff;
+    background:#4aaaa5;
+    padding: 10px 20px;
+    font-size: 18px;
+    margin-top: 10px;
+
+}
+input[type=submit]:hover {
+    background-color: #777777;
 }
